<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <TextView
        android:id="@+id/tvRaceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/title_race"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRaceStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/race_in_progress"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/tvRaceTitle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRaceStatus">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/duck_yellow"
                    android:src="@drawable/duck1" />

                <SeekBar
                    android:id="@+id/seekBarDuck1"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:max="1000"
                    android:progress="0"
                    android:progressDrawable="@drawable/seekbar_road"
                    android:thumb="@drawable/duck1"
                    android:thumbTint="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/duck_red"
                    android:src="@drawable/duck2" />

                <SeekBar
                    android:id="@+id/seekBarDuck2"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:max="1000"
                    android:progress="0"
                    android:progressDrawable="@drawable/seekbar_road"
                    android:thumb="@drawable/duck2"
                    android:thumbTint="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/duck_blue"
                    android:src="@drawable/duck3" />

                <SeekBar
                    android:id="@+id/seekBarDuck3"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:max="1000"
                    android:progress="0"
                    android:progressDrawable="@drawable/seekbar_road"
                    android:thumb="@drawable/duck3"
                    android:thumbTint="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/duck_green"
                    android:src="@drawable/duck4" />

                <SeekBar
                    android:id="@+id/seekBarDuck4"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:max="1000"
                    android:progress="0"
                    android:progressDrawable="@drawable/seekbar_road"
                    android:thumb="@drawable/duck4"
                    android:thumbTint="@null" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
